# cs2106-1

./: .gitignore  README.md  expected.txt  expected1.txt  input.txt  input1.txt  output.txt  pbuddy.cabal  regress.sh  run.sh
src/: Main.hs
src/PBuddy/: Manager.hs  Parser.hs  Process.hs  Resource.hs  Simulator.hs  Types.hs
