name:                pbuddy
version:             0.0.0
cabal-version:       >= 1.10
author:              Evan Sebastian
synopsis:            Process Scheduler Simulator (CS2106 Project 1)
license:             MIT
maintainer:          evanlhoini@gmail.com
build-type:          Simple
cabal-version:       >=1.8

library
    hs-source-dirs:  src
    exposed-modules: PBuddy.Parser
                ,    PBuddy.Process
                ,    PBuddy.Resource
                ,    PBuddy.Simulator
                ,    PBuddy.Types
                ,    PBuddy.Manager
    ghc-options:     -O4 -Wall -fno-warn-unused-do-bind -fno-warn-missing-signatures
    build-depends: base >=4 && < 5
                ,  split
                ,  vector
                ,  containers
                ,  unordered-containers
                ,  mtl
                ,  transformers
                ,  parsec

test-suite pbuddy-test-suite
    type:           exitcode-stdio-1.0
    hs-source-dirs: test
    main-is:        Spec.hs
    build-depends:  base >=4 && < 5
                 ,  hspec
                 ,  parsec
                 ,  pbuddy

executable pbuddy
    main-is:             src/Main.hs
    default-language:    Haskell2010
    build-depends:       base >=4 && < 5
                      ,  pbuddy
